<resources>
    <string name="app_name">Mine Seeker</string>
    <string name="mineseeker">MineSeeker</string>
    <string name="by_jason_sebastian_aritanto">By: Jason Sebastian Aritanto</string>
    <string name="assignment_3">Assignment 3</string>
    <string name="skip">skip</string>
    <string name="play">Play</string>
    <string name="option">Option</string>
    <string name="help">Help</string>
    <string name="board_size">Board Size</string>
    <string name="mine_number">Mine number</string>
    <string name="aboutme"><a href="https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home">
        This is created by Jason Sebastian Aritanto \n
        I am an SFU student taking CMPT 276 with Brian Fraser \n
        This app is created for Assignment3
    </a></string>
    <string name="about_the_author">About The Author</string>
    <string name="how_to_play">How to Play</string>
    <string name = "howtoplay">
        Objective of the game : \n
        Find all mines with fewest number of scan \n
        Instructions :\n
        1. Click one of the boxes \n
        2. If you found a mine, you can click on the mine to start a scan or click another box\n
        3. If you do not find a mine it starts a scan.\n
        4. Once you found all of the mines, you won\n
        Note: Scan the row and column of the button clicked for mines
    </string>
    <string name = "sources">
        Image Taken from:\n
        https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/assignments \n
        https://favpng.com/png_view/bomb-minesweeper-pro-classic-mine-sweeper-minesweeper-plus-likeminesweeper-png/jj3N2YV0\n


    </string>
    <string name="resetscore">ResetScore</string>
    <string name="you_win">You Win!</string>
    <string name="current_score">Current Score:</string>
    <string name="high_score">High Score:</string>
    <string name="returning">Return</string>
    <string name="you_have_played">You Have Played</string>
</resources>
